Fix https://issues.apache.org/bugzilla/show_bug.cgi?id=43150 # in installation path stops Tomcat starting
git-svn-id: https://svn.apache.org/repos/asf/tomcat/trunk@652669 13f79535-47bb-0310-9956-ffa450edef68